testdata/baselines/reference/submodule/compiler/destructuredLateBoundNameHasCorrectTypes.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
destructuredLateBoundNameHasCorrectTypes.ts(1,8): error TS2304: Cannot find name 'Symbol'.
destructuredLateBoundNameHasCorrectTypes.ts(1,8): error TS2538: Type 'error' cannot be used as an index type.
destructuredLateBoundNameHasCorrectTypes.ts(11,8): error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.
destructuredLateBoundNameHasCorrectTypes.ts(11,37): error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ prop2: any; }'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== destructuredLateBoundNameHasCorrectTypes.ts (4 errors) ====
    let { [Symbol.iterator]: destructured } = [];
           ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
           ~~~~~~~~~~~~~~~
!!! error TS2538: Type 'error' cannot be used as an index type.
    void destructured;
    
    const named = "prop";
    
    let { [named]: computed } = { prop: "b" };
    void computed;
    
    const notPresent = "prop2";
    
    let { [notPresent]: computed2 } = { prop: "b" };
           ~~~~~~~~~~
!!! error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.
                                        ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ prop2: any; }'.
    